@@ -1,27 +1,23 @@
-# Use the official Gradle image to build the project
-FROM gradle:latest AS build
+FROM eclipse-temurin:17 as jre-build
 
-# Set the working directory inside the container
-WORKDIR /app
+RUN $JAVA_HOME/bin/jlink \
+    --add-modules ALL-MODULE-PATH \
+    --strip-debug \
+    --no-man-pages \
+    --no-header-files \
+    --compress=2 \
+    --output /javaruntime
 
-# Copy the project files into the container
-COPY build.gradle.kts settings.gradle.kts /app/
-COPY src /app/src
+# Runtime
+FROM debian:buster-slim
 
-# Build the project using Gradle
-RUN gradle build
+ENV TZ="Europe/Oslo"
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH "${JAVA_HOME}/bin:${PATH}"
 
-# Use the official OpenJDK image as the base image for running the application
-FROM openjdk:latest
+COPY --from=jre-build /javaruntime $JAVA_HOME
 
-# Set the working directory inside the container
-WORKDIR /app
+COPY build/install/* /
 
-# Copy the built JAR file from the build stage
-COPY --from=build /app/build/libs/*.jar /app/app.jar
-
-# Expose port 8080 to the outside world
-EXPOSE 8080
-
-# Run the application when the container starts
-CMD ["java", "-jar", "app.jar"]
+USER nobody
+CMD ["getting-started"]
